Made first and second page

--- a/index.html
+++ b/index.html
@@ -2,9 +2,33 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title></title>
+    <title>WebLeertaak</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
+    <div id="navigation">
+      <ul>
+        <li><a class="active" href="#">Home</a></li>
+        <li><a href="settings.html">Instellingen</a></li>
+        <li><a href="progress.html">Voortgang</a></li>
+      </ul>
+    </div>
+    <h1>Voortgansmonitor</h1>
 
+    <img src="hu.png" id="HULogo"/>
+    <p>Deze persoonlijke voortgangspagina dient je inzicht te geven in je studievoortgang.
+    Op de <a href="settings.html">instellingen</a> pagina kun je informatie omtrent je persoon instellen<br>
+
+    Op de <a href="progress.html">voortgang</a> pagina kun je vervolgens je vakken invullen, het aantal ECTS ervan
+    en de datum waarop je het vak hebt behaald.<br>
+    Door op de knop bereken studietempo te klikken zal vervolgens een dialoogvenster verschijnen dat op basis
+    van ingevoerde informatie je studietempo berekent.</p>
+    <p>Deze versie van de voortgangsmonitor is echter nog beperkt in zijn functionaliteit, omdat het niet zo
+    zeer om de werking ervan gaat, maar veel meer om goede omzetting van een wireframe naar een HTML, CSS EN JS.</p>
+    <img src="home.png" id="homeImg"/>
+    <footer id="footer"><i><p id="footerTop">Deze opdracht is gemaakt in het kader van het vak Analyse & User interfacing</p>
+      <p>Auteur: Joost Luijben <span id="footerRight">Datum: 5-2-2018</span></p>
+      </i>
+    </footer>
   </body>
 </html>
