--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
       </ul>
     </div>
     <h1>Voortgansmonitor</h1>
-
-    <img src="hu.png" id="HULogo"/>
+    <p style="display: none">IK BEN ONZICHTBAAR</p>
+    <img src="hu.png" id="HULogo" alt="HU_image"/>
     <p>Deze persoonlijke voortgangspagina dient je inzicht te geven in je studievoortgang.
     Op de <a href="settings.html">instellingen</a> pagina kun je informatie omtrent je persoon instellen<br>
 
@@ -25,10 +25,9 @@
     van ingevoerde informatie je studietempo berekent.</p>
     <p>Deze versie van de voortgangsmonitor is echter nog beperkt in zijn functionaliteit, omdat het niet zo
     zeer om de werking ervan gaat, maar veel meer om goede omzetting van een wireframe naar een HTML, CSS EN JS.</p>
-    <img src="home.png" id="homeImg"/>
-    <footer id="footer"><i><p id="footerTop">Deze opdracht is gemaakt in het kader van het vak Analyse & User interfacing</p>
-      <p>Auteur: Joost Luijben <span id="footerRight">Datum: 5-2-2018</span></p>
-      </i>
+    <img src="home.png" id="homeImg" alt="homeImage"/>
+    <footer id="footer"><p id="footerTop"><i>Deze opdracht is gemaakt in het kader van het vak Analyse & User interfacing</i></p>
+      <p><i>Auteur: Joost Luijben <span id="footerRight">Datum: 5-2-2018</span></i></p>
     </footer>
   </body>
 </html>
