--- a/settings.html
+++ b/settings.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
+  <div id="menuBar">
     <div id="navigation">
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -13,6 +14,8 @@
         <li><a href="progress.html">Voortgang</a></li>
       </ul>
     </div>
+  </div>
+    <div id="content">
     <h1>Instellingen</h1>
     <form id="settings">
     <div id='leftForm'>
@@ -42,8 +45,9 @@
       <input class="radio" type="radio" name="firstYear" id="firstYearNo">Nee<label for="firstYearNo"></label>
     </div>
     </form>
-    <footer id="footer"><p id="footerTop"><i>Deze opdracht is gemaakt in het kader van het vak Analyse & User interfacing</i></p>
-      <p><i>Auteur: Joost Luijben <span id="footerRight">Datum: 5-2-2018</span></i></p>
-    </footer>
+  </div>
+  <footer id="footer"><p id="footerTop"><i>Deze opdracht is gemaakt in het kader van het vak Analyse & User interfacing</i></p>
+    <p><i>Auteur: Joost Luijben <span id="footerRight">Datum: 5-2-2018</span></i></p>
+  </footer>
   </body>
 </html>
