--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
+  <div id="menuBar">
     <div id="navigation">
       <ul>
         <li><a class="active" href="#">Home</a></li>
@@ -13,6 +14,8 @@
         <li><a href="progress.html">Voortgang</a></li>
       </ul>
     </div>
+  </div>
+  <div id="content">
     <h1>Voortgansmonitor</h1>
     <p style="display: none">IK BEN ONZICHTBAAR</p>
     <img src="hu.png" id="HULogo" alt="HU_image"/>
@@ -26,8 +29,9 @@
     <p>Deze versie van de voortgangsmonitor is echter nog beperkt in zijn functionaliteit, omdat het niet zo
     zeer om de werking ervan gaat, maar veel meer om goede omzetting van een wireframe naar een HTML, CSS EN JS.</p>
     <img src="home.png" id="homeImg" alt="homeImage"/>
-    <footer id="footer"><p id="footerTop"><i>Deze opdracht is gemaakt in het kader van het vak Analyse & User interfacing</i></p>
-      <p><i>Auteur: Joost Luijben <span id="footerRight">Datum: 5-2-2018</span></i></p>
-    </footer>
+  </div>
+  <footer id="footer"><p id="footerTop"><i>Deze opdracht is gemaakt in het kader van het vak Analyse & User interfacing</i></p>
+    <p><i>Auteur: Joost Luijben <span id="footerRight">Datum: 5-2-2018</span></i></p>
+  </footer>
   </body>
 </html>
