--- a/progress.html
+++ b/progress.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
+  <div id="menuBar">
     <div id="navigation">
       <ul>
         <li><a href="index.html">Home</a></li>
@@ -13,6 +14,12 @@
         <li><a class="active" href="#">Voortgang</a></li>
       </ul>
     </div>
+    <div id="user">
+      <img src="user.png" alt="user">
+      <p> Joost</p>
+    </div>
+  </div>
+    <div id="content">
     <div id="leftProgress">
     <h1>Voortgang</h1>
     <table id="progressTable">
@@ -42,6 +49,7 @@
     </tbody>
     </table>
   </div>
+</div>
     <div id="rightProgress">
       <h3>Student:</h3>
     <img src="graph.png" id="graphImg" alt="graph"/>
