--- a/index.html
+++ b/index.html
@@ -14,6 +14,10 @@
         <li><a href="progress.html">Voortgang</a></li>
       </ul>
     </div>
+    <div id="user">
+      <img src="user.png" alt="user">
+      <p> Joost</p>
+    </div>
   </div>
   <div id="content">
     <h1>Voortgansmonitor</h1>
