--- a/progress.html
+++ b/progress.html
@@ -48,13 +48,19 @@
       </tr>
     </tbody>
     </table>
+    <button type="button" id="studyChartButton" onclick="calculation()"><b>Bereken studietempo</b></button>
+
   </div>
+
 </div>
     <div id="rightProgress">
       <h3>Student:</h3>
+      <iframe id="map"
+        frameborder="0"
+        src="https://www.google.com/maps/embed/v1/place?key=AIzaSyDrxviFvdgZCmh2z2nIDYAigW-ODuZd2xU&q=Aalberselanen+1,Woerden">
+      </iframe>
     <img src="graph.png" id="graphImg" alt="graph"/>
-    <button type="button" id="studyChartButton" onclick="calculation()"><b>Bereken studietempo</b></button>
-  </div>
+    </div>
   <footer id="footer"><p id="footerTop"><i>Deze opdracht is gemaakt in het kader van het vak Analyse & User interfacing</i></p>
     <p><i>Auteur: Joost Luijben <span id="footerRight">Datum: 5-2-2018</span></i></p>
   </footer>
