--- a/settings.html
+++ b/settings.html
@@ -14,6 +14,10 @@
         <li><a href="progress.html">Voortgang</a></li>
       </ul>
     </div>
+    <div id="user">
+      <img src="user.png" alt="user">
+      <p> Joost</p>
+    </div>
   </div>
     <div id="content">
     <h1>Instellingen</h1>
@@ -21,11 +25,21 @@
     <div id='leftForm'>
       <p><label class="field" for="firstName">Voornaam:</label><input type="text" id="firstName"/></p>
       <p><label class="field" for="sirName">Achternaam:</label><input type="text" id="sirName"/></p>
-      <p><label class="field" for="studentNumber">Studentnr:</label><input type="text" id="studentNumber"/></p>
+      <p><label class="field" for="address">Adres:</label><input type="text" id="address"/></p>
       <p><label class="field" for="email">Email:</label><input type="email" id="email"/></p>
+      <p><label class="field" for="email">Telefoonnummer:</label><input type="email" id="email"/></p>
+      <p>Geslacht: </p>
+      <div id="inputMale">
+        <input class="gender" type="radio" name="male" id="male">Man<label for="male"></label>
+      </div>
+      <div id="inputFemale">
+        <input class="gender" type="radio" name="female" id="female">Vrouw<label for="female"></label>
+      </div>
+      <input class="gender" type="radio" name="other" id="other">Anders<label for="other"></label>
       <p><label class="field" for="birthday">Geboortedatum:</label><input type="date" id="birthday"/></p>
     </div>
     <div id='rightForm'>
+      <p><label class="field" for="studentNumber">Studentnummer:</label><input type="text" id="studentNumber"/></p>
       <p><label class="field" for="class">Klas:</label>
       <select id="class">
         <option>V1A</option>
@@ -40,10 +54,10 @@
       <input class="radio" type="radio" name="study" id="BIM">BIM<label for="BIM"></label>
       <input class="radio" type="radio" name="study" id="SIE">SIE<label for="SIE"></label>
       <input class="radio" type="radio" name="study" id="TI">TI<label for="TI"></label>
-      <p>Propedeuse behaald:</p>
-      <input class="radio" type="radio" name="firstYear" id="firstYearYes">Ja<label for="firstYearYes"></label>
-      <input class="radio" type="radio" name="firstYear" id="firstYearNo">Nee<label for="firstYearNo"></label>
-    </div>
+      <p>Foto: </p>
+      <img src="defaultUser.jpg" alt="userImage">
+      <button id="change">Change</button>
+      </div>
     </form>
   </div>
   <footer id="footer"><p id="footerTop"><i>Deze opdracht is gemaakt in het kader van het vak Analyse & User interfacing</i></p>
