--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>WebLeertaak</title>
+    <!--Call external stylesheet and javascript file-->
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="progress.js"></script>
   </head>
   <body>
+  <!--Navigation in list-->
   <div id="menuBar">
     <div id="navigation">
       <ul>
@@ -14,15 +17,17 @@
         <li><a href="progress.html">Voortgang</a></li>
       </ul>
     </div>
+    <!--user bar with image and name-->
     <div id="user">
-      <img src="user.png" alt="user">
+      <img src="images/user.png" alt="user">
       <p> Joost</p>
     </div>
   </div>
+  <!--All the content of the main page-->
   <div id="content">
     <h1>Voortgansmonitor</h1>
     <p style="display: none">IK BEN ONZICHTBAAR</p>
-    <img src="hu.png" id="HULogo" alt="HU_image"/>
+    <img src="images/hu.png" id="HULogo" alt="HU_image"/>
     <p>Deze persoonlijke voortgangspagina dient je inzicht te geven in je studievoortgang.
     Op de <a href="settings.html">instellingen</a> pagina kun je informatie omtrent je persoon instellen<br>
 
@@ -32,9 +37,10 @@
     van ingevoerde informatie je studietempo berekent.</p>
     <p>Deze versie van de voortgangsmonitor is echter nog beperkt in zijn functionaliteit, omdat het niet zo
     zeer om de werking ervan gaat, maar veel meer om goede omzetting van een wireframe naar een HTML, CSS EN JS.</p>
-    <img src="home.png" id="homeImg" alt="homeImage"/>
+    <img src="images/home.png" id="homeImg" alt="homeImage"/>
   </div>
-  <footer id="footer"><p id="footerTop"><i>Deze opdracht is gemaakt in het kader van het vak Analyse & User interfacing</i></p>
+  <!--create the footer-->
+  <footer id="footer"><p id="footerTop"><i>Deze opdracht is gemaakt in het kader van het vak Analyse &#38; User interfacing</i></p>
     <p><i>Auteur: Joost Luijben <span id="footerRight">Datum: 5-2-2018</span></i></p>
   </footer>
   </body>
