--- a/settings.html
+++ b/settings.html
@@ -3,9 +3,12 @@
   <head>
     <meta charset="utf-8">
     <title>WebLeertaak</title>
+    <!--Call external stylesheet and javascript file-->
     <link rel="stylesheet" type="text/css" href="style.css">
+    <script src="progress.js"></script>
   </head>
   <body>
+    <!--Navigation in list-->
   <div id="menuBar">
     <div id="navigation">
       <ul>
@@ -14,14 +17,17 @@
         <li><a href="progress.html">Voortgang</a></li>
       </ul>
     </div>
+    <!--user bar with image and name-->
     <div id="user">
-      <img src="user.png" alt="user">
+      <img src="images/user.png" alt="user">
       <p> Joost</p>
     </div>
   </div>
+
     <div id="content">
     <h1>Instellingen</h1>
     <form id="settings">
+      <!--create left side of the form-->
     <div id='leftForm'>
       <p><label class="field" for="firstName">Voornaam:</label><input type="text" id="firstName"/></p>
       <p><label class="field" for="sirName">Achternaam:</label><input type="text" id="sirName"/></p>
@@ -29,15 +35,19 @@
       <p><label class="field" for="email">Email:</label><input type="email" id="email"/></p>
       <p><label class="field" for="email">Telefoonnummer:</label><input type="email" id="email"/></p>
       <p>Geslacht: </p>
+
       <div id="inputMale">
         <input class="gender" type="radio" name="male" id="male">Man<label for="male"></label>
       </div>
+
       <div id="inputFemale">
         <input class="gender" type="radio" name="female" id="female">Vrouw<label for="female"></label>
       </div>
+
       <input class="gender" type="radio" name="other" id="other">Anders<label for="other"></label>
       <p><label class="field" for="birthday">Geboortedatum:</label><input type="date" id="birthday"/></p>
     </div>
+    <!--create right side of the form-->
     <div id='rightForm'>
       <p><label class="field" for="studentNumber">Studentnummer:</label><input type="text" id="studentNumber"/></p>
       <p><label class="field" for="class">Klas:</label>
@@ -54,13 +64,15 @@
       <input class="radio" type="radio" name="study" id="BIM">BIM<label for="BIM"></label>
       <input class="radio" type="radio" name="study" id="SIE">SIE<label for="SIE"></label>
       <input class="radio" type="radio" name="study" id="TI">TI<label for="TI"></label>
+
       <p>Foto: </p>
-      <img src="defaultUser.jpg" alt="userImage">
+      <img src="images/defaultUser.jpg" alt="userImage">
       <button id="change">Change</button>
       </div>
     </form>
   </div>
-  <footer id="footer"><p id="footerTop"><i>Deze opdracht is gemaakt in het kader van het vak Analyse & User interfacing</i></p>
+  <!--create the footer-->
+  <footer id="footer"><p id="footerTop"><i>Deze opdracht is gemaakt in het kader van het vak Analyse &#38; User interfacing</i></p>
     <p><i>Auteur: Joost Luijben <span id="footerRight">Datum: 5-2-2018</span></i></p>
   </footer>
   </body>
